feat: put selected auto path on dashboard and alerts for auto positioning